# pyversion

./: .gitattributes  .gitconfig  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  version.py
jenkins/: clean.sh  configure.sh  lint.sh  release.sh  test.sh  virtualenv.sh
version/: __init__.py  cli.py  increment_command.py  tag_command.py  version.py  version3.py
version-tests/: test_version.py
version_tests/: test_version.py
