[bdist_wheel]
universal=1

[flake8]
exit-zero=true
statistics=true
format=pylint
show-pep8=true

[nosetests]
verbosity=1
debug=0
detailed-errors=1
with-xunit=1
with-xcoverage=1
xunit-file=test_output/output.xml
cover-package=version
cover-erase=1
cover-html=1
cover-html-dir=coverage_output/
xcoverage-file=coverage_output/coverage.xml

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[upload_sphinx]
upload-dir = docs/build/html

[metadata]
name = pyversion
author = Kyle Rockman
author_email = ['kyle.rockman@mac.com']
summary = Python package versioning made simple
description-file = README.rst
license-file = LICENSE
home-page = http://github.com/rocktavious/pyversion
classifiers = 
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2 :: Only

[files]
packages = 
    version

[entry_points]
distutils.commands =
    tag = version.tag_command:tag
    increment = version.increment_command:increment

[pbr]
warnerrors = True

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

