[bdist_wheel]
universal=1

[flake8]
ignore = E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E501,E701
exclude = version_tests/*
statistics = False
format = pylint

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[upload_sphinx]
upload-dir = docs/build/html

[metadata]
name = pyversion3
author = Kyle Rockman - ported to python3 by Ling Li
author_email = ['kyle.rockman@mac.com', 'email@ling-li.com']
summary = Python package versioning made simple
description-file = README.rst
license-file = LICENSE
home-page = http://github.com/lingster/pyversion3
classifiers =
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only

[files]
packages =
    version

[entry_points]
distutils.setup_keywords =
    auto_version = version.version:version_keyword
distutils.commands =
    tag = version.tag_command:tag
    increment = version.increment_command:increment
console_scripts =
    pyversion3 = version.cli:main

[pbr]
warnerrors = True

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

